## =========
Version 2.1-12 [2019-05-02] (Development version)

Misc.:
  - seqST(): Suppressed unwanted messages when norm=TRUE.


## =========
Version 2.0-11.1 [2019-03-22]

Bug Fixes:
  - eventseq.cpp: rchk message 'calling allocating function
    Rf_asChar with argument allocated using TMRNumberFormat'.

## =========
Version 2.0-11 [2019-03-18]

Changes in existing functions:
  - seqdef(). Speed improvement suggested by Jouni Helske.
    Transparent for the user.
  - seqdist(). An error is raised when the number of
    unique sequences exceeds the maximal allowed.
  - plot.ststlist.statd(). Now checks the 'type' argument and
    returns the values plotted.

Bug Fixes:
  - seqtab(), seqxtract(), checkcost(), SPELL_to_STS(). Issues
    with length > 1 in coercion to logical.
  - Warning about potential stack imbalanced PROTECT in relation
    with TMRNumberFormat in the C++ code (eventseq.cpp).

## =========
Version 2.0-10 [2018-11-18]

Bug Fixes:
  - seqdist(): when 'refseq' was passed as a state sequence
    object wrong results were sometimes returned.
  - seqdist(): CHI2 and EUCLID distances were computed using
    counts instead of proportions.
  - seqdist(): CHI2 and EUCLID bad behavior in presence of missings.
  - Vignette: Fixed issue with updated \code{fancyvrb.sty}.

Misc:
  - Vignette: Error in formula for complexity index.
    Also, now DOI instead of link to JSS article.

## =========
Version 2.0-9 [2018-08-20]

Changes in existing functions:
  - seqplot()} now supports the 'ncol' argument for controlling
    the number of columns in the color legend.
  - seqdef(): new argument 'tick.last' to set the 'tick.last'
    attribute of the state sequence object. Default is
    tick.last = FALSE to preserve the previous behavior.
  - plot.stslist(), plot.stslist.freq(), plot.stslist.statd(),
    plot.stslist.modst(), plot.stslist.rep() (i.e. also seqplot()
    with type "i", "I", "f", "d", "Ht", "ms", or "r"),