@@ -5,6 +5,18 @@
   Computes Elzinga's turbulence for each sequence in a sequence data set.
 }
 
+\usage{
+ seqST(seqdata, norm=FALSE, silent=TRUE)
+}
+\arguments{
+  \item{seqdata}{a state sequence object as returned by the the \code{\link{seqdef}} function.}
+
+  \item{norm}{logical: Should the turbulence index be normalized?}
+
+  \item{silent}{logical: Should messages about carried over operations (extracting dss and durations, computing turbulence) be displayed?}
+}
+
+
 \details{
  Sequence turbulence is a measure proposed by \cite{Elzinga
 & Liefbroer (2007)}. It is based on the number \eqn{\phi(x)}{phi(x)}
@@ -29,15 +41,7 @@ distinct states, i.e. the sequence duration divided by the number
 
 The function searches for missing states in the sequences and if found, adds the missing state to the alphabet for the computation of the turbulence. In this case the \code{\link{seqdss}} and \code{\link{seqdur}} functions for extracting the distinct successive state sequences and the associated durations are called with the \code{{with.missing=TRUE}} argument. A missing state in a sequence is considered as the occurrence of an additional symbol of the alphabet, and two or more consecutive missing states are considered as two or more occurences of the same state. Hence the DSS of \code{A-A-*-*-*-B-B-C-C-D} is \code{A-*-B-C-D} and the associated durations are \code{2-3-2-2-1}.
 
-The normalized value is obtained by subtracting 1 to the index and dividing by the turbulence value of a sequence made by repeating successively the alphabet up to the maximal length in \code{seqdata}.
-}
-\usage{
- seqST(seqdata, norm=FALSE)
-}
-\arguments{
-  \item{seqdata}{a state sequence object as returned by the the \code{\link{seqdef}} function.}
-  
-  \item{norm}{logical: Should the turbulence index be normalized?}
+The normalized value is obtained by subtracting 1 to the index and dividing by the turbulence value of a sequence made by the successive repetition of the alphabet up to the maximal length in \code{seqdata}.
 }
 
 \value{a vector of length equal to the number of sequences in
@@ -64,7 +68,7 @@ The normalized value is obtained by subtracting 1 to the index and dividing by t
 
   ## Histogram for the turbulence
   hist(turb)
-  
+
   ## Normalized turbulence
   turb.norm <- seqST(actcal.seq, norm=TRUE)
 
